first pass on httpstack